# berzerk_in_rust

./: Cargo.toml  README.MD
src/: game.rs  main.rs  music.rs
src/models/: bullet.rs  enemy.rs  mod.rs  player.rs  vector.rs
