[package]
name = "berzerk"
version = "0.1.0"
authors = ["andrea-couto <acouto@student.bridgew.edu>"]

build = "build.rs"

[dependencies]
piston = "0.31.1"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.35.0"
piston2d-opengl_graphics = "0.40.0"
rand = "0.3"
find_folder = "0.3.0"
piston_window = "0.80.0"
pistoncore-sdl2_window = "0.50.0"
sdl2 = "*"